<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_balaio" />

        <TextView
            style="@style/Rotulo"
            android:layout_marginTop="0dp"
            android:text="@string/rotulo_consumo" />

        <EditText
            android:id="@+id/editConsumo"
            style="@style/Campo"
            android:inputType="numberDecimal"
            android:text="@string/zero" />

        <TextView
            style="@style/Rotulo"
            android:text="@string/rotulo_couvert" />

        <EditText
            android:id="@+id/editCouvert"
            style="@style/Campo"
            android:inputType="numberDecimal"
            android:text="@string/zero" />

        <TextView
            style="@style/Rotulo"
            android:text="@string/rotulo_pessoas" />

        <EditText
            android:id="@+id/editPessoas"
            style="@style/Campo"
            android:inputType="number"
            android:text="@string/zero" />

        <Button
            android:id="@+id/btnCalcular"
            style="@style/BotaoPrincipal"
            android:text="@string/botao_calcular" />

        <TextView
            style="@style/Rotulo"
            android:layout_marginTop="20dp"
            android:text="@string/rotulo_taxa" />

        <TextView
            android:id="@+id/txtTaxa"
            style="@style/Valor" />

        <TextView
            style="@style/Rotulo"
            android:text="@string/rotulo_total" />

        <TextView
            android:id="@+id/txtContaTotal"
            style="@style/Valor" />

        <TextView
            style="@style/Rotulo"
            android:text="@string/rotulo_por_pessoa" />

        <TextView
            android:id="@+id/txtPorPessoa"
            style="@style/Valor" />

    </LinearLayout>
</ScrollView>
